// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{{*foo}}

{{#helper}}{{*decorator}}{{/helper}}

{{#helper}}{{*decorator foo}}{{/helper}}

=====================================output=====================================
{{*foo}}

{{#helper}}{{*decorator}}{{/helper}}

{{#helper}}{{*decorator foo}}{{/helper}}
================================================================================
`;

exports[`inline-partial.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{{#*inline "myPartial"}}
  My Content
{{/inline}}
{{#each people}}
  {{> myPartial}}
{{/each}}

=====================================output=====================================
{{#*inline "myPartial"}}
  My Content
{{/inline}}
{{#each people}}
  {{> myPartial}}
{{/each}}
================================================================================
`;

exports[`layout.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{{#> layout}}
  {{#*inline "nav"}}
    My Nav
  {{/inline}}
  {{#*inline "content"}}
    My Content
  {{/inline}}
{{/layout}}

=====================================output=====================================
{{#> layout}}
  {{#*inline "nav"}}
    My Nav
  {{/inline}}
  {{#*inline "content"}}
    My Content
  {{/inline}}
{{/layout}}
================================================================================
`;

exports[`root.hbs format 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{{*decorator "success"}}

=====================================output=====================================
{{*decorator "success"}}
================================================================================
`;
